--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 .clearfix::after{
-	content: “”;
+	content: '';
 	display: table;
 	clear: both;
 }
@@ -79,8 +79,12 @@ nav .button{
 }
 
 .box{
-    width: 80%;
-    margin: 0 auto;
+    width: 50%;
+    float: left;
+}
+
+.one{
+    padding-left: 80px;
 }
 
 h1{
@@ -88,10 +92,11 @@ h1{
     font-weight: bolder;
     margin: 0 auto;
     margin-top: 60px;
+    padding-left: 80px;
 }
 
 .box p{
-    max-width: 30%;
+    max-width: 40%;
     font-size: small;
 }
 
@@ -113,13 +118,12 @@ h1{
 }
 
 .arrow{
-    padding-bottom: 100px;
+    padding-bottom: 80px;
 }
 
-
-
- header #jumbo figure img{
-    height: 50%;
-    width: 50%;
-    float: right;
+ header #jumbo .box img{
+    width: 100%;
+    position: relative;
+    right: 250px;
+    bottom: -80px;
 }
