--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,36 @@ h1{
     right: 250px;
     bottom: -80px;
 }
+
+/* inizio sezione main */
+
+/* sezione 1 */
+
+.container{
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 150px;
+}
+
+.piano{
+    font-size: 4vh;
+    margin-bottom: 40px;
+}
+
+.circlebutt{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.signed{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border: 5px solid blue;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+.un{
+    border: 2px solid grey;
+}
