--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ nav{
     width: 100%;
     position: fixed;
     background-color: white;
+    z-index: 100;
 }
 
 nav .logo{
@@ -164,6 +165,7 @@ h1{
 
 .offerta{
     border: 1px solid lightgray;
+    width: 30%;
 }
 
 .top{
@@ -171,8 +173,17 @@ h1{
     border-bottom: 1px solid lightgray;
 }
 
-.offerta{
-    width: 30%;
+.mid{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.centrer{
+    padding: 30px;
+}
+
+.offerta .top{
+    padding: 10px;
 }
 
 .centrer .big{
@@ -203,6 +214,10 @@ h1{
     margin-top: 40px;
 }
 
+hr{
+    width: 30%;
+}
+
 .centrer .underlined{
     padding-bottom: 20px;
     padding-top: 30px;
@@ -224,6 +239,46 @@ h1{
     padding-bottom: 20px;
 }
 
+ul .last{
+    padding-bottom: 70px;
+}
+
+ul .real-last{
+    padding-bottom: 30px;
+}
+
 ul li i{
     color: blue;
 }
+
+.bottom{
+    margin-top: 30px;
+    border: 1px solid lightgray;
+}
+
+.bottom .big, .bottom .sub{
+    max-width: 50%;
+}
+
+.bottom .big{
+    font-size: x-large;
+    font-weight: bolder;
+    padding-bottom: 20px;
+}
+
+.bottom .sub{
+    font-size: large;
+    font-weight: bolder;
+    padding-top: 30px;
+}
+
+.bottom .top{
+    padding: 10px;
+}
+
+.bottom .button{
+    position: relative;
+    left: 80%;
+}
+
+/* lavoro section 2 */
