--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ h1{
     margin-top: 40px;
 }
 
-hr{
+.centrer hr{
     width: 30%;
 }
 
@@ -432,4 +432,13 @@ ul li i{
     position: relative;
     left: 65%;
     bottom: 45%;
+}
+
+.container .clearfix p.left{
+    margin-top: 40px;
+}
+
+.container .clearfix i.right{
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
