--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,8 @@ ul li i{
     bottom: 45%;
 }
 
+/* section 6 */
+
 .container .clearfix p.left{
     margin-top: 40px;
 }
@@ -441,4 +443,38 @@ ul li i{
 .container .clearfix i.right{
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+/* footer */
+
+footer{
+    height: 600px;
+    background-color: black;
+}
+
+.final-container{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.final-container ul{
+    padding-right: 50px;
+    padding-top: 80px;
+    padding-bottom: 70px;
+}
+
+.final-container ul li{
+    color: white;
+}
+
+li.last-title{
+    font-size: larger;
+    font-weight: bolder;
+    padding-bottom: 30px;
+}
+
+footer hr{
+    width: 20%;
+    color: white;
+    background-color: white;
 }
