--- a/css/style.css
+++ b/css/style.css
@@ -87,24 +87,30 @@ nav ul li a:hover{
 border-bottom: 3px solid black;
 }
 
- ul .dropdown {
+.dropdown {
     position: relative;
     display: inline-block;
-  }
+}
   
-  ul .dropdown-content {
+.dropdown-content {
     display: none;
+    padding: 10px;
     position: absolute;
+    right: 0;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
     z-index: 1;
-  }
+}
   
-  .dropdown:hover .dropdown-content {
+.dropdown-content a {
+    color: black;
+    line-height: 30px;
     display: block;
-  }
+}
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 /* lavoro jumbo */
 
